<resources>
    <string name="app_name">BeeScrapeApps</string>
    <string name="signUpEmail">Sign up with email</string>
    <string name="signUpGoogle">Sign up with google</string>
    <string name="signUpFb">Sign up with Facebook</string>
    <string name="or_use_social_media">Or use social media</string>
    <string name="login">&lt;u>Already have an account ? Login&lt;/u></string>
    <string name="boldTitleWelcome">Get the Information You Need in a Snap</string>
    <string name="descWelcome">Now you can easily dig and collect whatever important information you need</string>
    <string name="TvSignUpEmail">Create Your Account</string>
    <string name="tvDescSignUpEmail">Create your account to start find information</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="usernameHint">Enter your username</string>
    <string name="emailHint">Enter your email</string>
    <string name="pwHint">Enter your password</string>
    <string name="submitSignUp">Create Account</string>
    <string name="help">help</string>
    <string name="loginPage">Login</string>
    <string name="loginTitle">Welcome Back</string>
    <string name="loginDesc">Login to start looking for the information you want</string>
    <string name="splashWord">"By: CH2-PS401 "</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_welcome_back">Hello, welcome back!</string>
</resources>